# ChangeLog for dev-java/commons-collections
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-collections/ChangeLog,v 1.15 2004/01/19 05:02:40 strider Exp $

  19 Jan 2004; Adrian Almenar <strider@gentoo.org>
  commons-collections-2.1-r3.ebuild:
  Added amd64 keyword. Added ppc keyword.

*commons-collections-2.1-r3 (17 Mar 2003)

  26 Apr 2003; Adrian Almenar <strider@gentoo.org> commons-collections-2.1-r3.ebuild:
  Updated SRC_URI so this ebuild uses apache mirrors.

  06 Apr 2003; absinthe <absinthe@gentoo.org> commons-collections-2.1-r3.ebuild:
  x86 moved to stable.  added ppc sparc.

  18 Mar 2003; Dylan Carlson <absinthe@gentoo.org>
  commons-collections-2.1-r3.ebuild:
  java-commons eclass and functions were renamed to jakarta-commons.

  17 Mar 2003; Dylan Carlson <absinthe@gentoo.org>
  commons-collections-2.1-r3.ebuild:
  Changed to use java-commons eclass.  Masked for testing.

*commons-collections-2.1-r2 (16 Mar 2003)

  16 Mar 2003; Dylan Carlson <absinthe@gentoo.org>
  commons-collections-2.1-r2.ebuild:
  Added 'doc' use flag.

*commons-collections-2.1-r1 (02 Nov 2002)

  24 Nov 2002; Adrian Almenar <strider@gentoo.org> 
  Releasing it, since it has been tested a lot and works very well. 

  04 Nov 2002; Adrian Almenar <strider@gentoo.org> commons-collections-2.1-r1.ebuild:
  Changed KEYWORDS, removed other arch's cause i have not tested it
  leaving only ~x86. UnMasking it from packages.mask. 
  Removed commons-collections-2.0.ebuild commons-collections-2.1.ebuild 
  files/digest-commons-collections-2.0 files/digest-commons-collections-2.1     

  02 Nov 2002; Karl Trygve Kalleberg <karltk@gentoo.org> commons-collections-2.1-r1.ebuild files/digest-commons-collections-2.1-r1 :
  Adds jikes compilation support. Ebuild submitted by the 
  ever-so-overproductive Adrian Almenar <aalmenar@conectium.com>.
