@@ -1,4 +1,6 @@
-MD5 cf6d2f2dbaaa4b4e474771d78b542aea commons-collections-2.1-r3.ebuild 851
-MD5 1a98185c43990b5c9e72985ed6e27216 ChangeLog 2481
+MD5 de5f2d9d1dd2495b906e026b90154c82 commons-collections-2.1-r3.ebuild 850
+MD5 b84da7d5be89a39227b521e09e6677cf commons-collections-3.0.ebuild 803
+MD5 c687e0504e4b10ad54f4359a437ea90d ChangeLog 2689
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 MD5 a7f25fdfedae6ea7bacf4df7c4961691 files/digest-commons-collections-2.1-r3 71
+MD5 384d7c4e44a87df342f5270dcaccd3f1 files/digest-commons-collections-3.0 80
